--- a/app/src/main/res/layout/fragment_layout.xml
+++ b/app/src/main/res/layout/fragment_layout.xml
@@ -4,7 +4,7 @@
     android:id="@+id/refreshItemsLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.fragments.BusinessFragment">
+    tools:context=".ui.main.fragments.NewsFragment">
 
     <FrameLayout
         android:layout_width="wrap_content"
